--- a/yet_biomim.bib
+++ b/yet_biomim.bib
@@ -166,7 +166,7 @@
   day       = {21},
   doi       = {10.7554/elife.74086},
   editor    = {Ammie K Kalan,},
-  file      = {:C\:/Users/SchmettowM/Github/yet_biomim/Literature/elife-74086-v1.pdf:PDF},
+  file      = {:C\:/Users/SchmettowM/Github/yet_biomim/Literature/elife-74086-v1.pdf:PDF;:Kano2022a - Experimental Evidence That Uniformly White Sclera Enhances the Visibility of Eye Gaze Direction in Humans and Chimpanzees.pdf:PDF},
   publisher = {eLife Sciences Publications, Ltd},
 }
 
@@ -328,7 +328,7 @@
   date      = {2014-07-31},
   day       = {31},
   doi       = {10.1068/p5896},
-  file      = {:C\:/Users/SchmettowM/Github/yet_biomim/Literature/Psychophysics_of_Perceiving_Eye-Gaze_and_Head_Dire.pdf:PDF},
+  file      = {:C\:/Users/SchmettowM/Github/yet_biomim/Literature/Psychophysics_of_Perceiving_Eye-Gaze_and_Head_Dire.pdf:PDF;:Loomis2008b - Psychophysics of Perceiving Eye Gaze and Head Direction with Peripheral Vision_ Implications for the Dynamics of Eye Gaze Behavior.pdf:PDF},
   publisher = {SAGE Publications},
 }
 
@@ -615,6 +615,66 @@
   doi       = {10.1016/j.tics.2008.11.009},
   file      = {:C\:/Users/SchmettowM/Github/yet_biomim/Literature/PIIS1364661309000199.pdf:PDF},
   publisher = {Elsevier BV},
+}
+
+@InProceedings{Humphrey0123,
+  author   = {Tasmin Humphrey},
+  title    = {The role of cat eye narrowing movements in cat–human communication},
+  year     = {0123},
+  abstract = {Scientific Reports, https://doi.org/10.1038/s41598-020-73426-0},
+  doi      = {.org/10.1038/s41598-020-73426-0},
+  file     = {:/home/mart/Packages/yet_biomim/Literature/s41598-020-73426-0.pdf:PDF},
+}
+
+@Article{Pongracz2019,
+  author    = {Pongrácz, Péter and Szapu, Julianna Szulamit and Faragó, Tamás},
+  journal   = {Intelligence},
+  title     = {Cats (Felis silvestris catus) read human gaze for referential information},
+  year      = {2019},
+  issn      = {0160-2896},
+  month     = may,
+  pages     = {43--52},
+  volume    = {74},
+  abstract  = {Companion cats often occupy the same anthropogenic niche as dogs in human families. Still, cat cognition remains an underrepresented research subject in ethology. Our goal was to examine whether two components that are crucial in dog-human communicative interactions (sensitivity to ostensive signals; gaze following) are also present in cats. In a two-object choice task, we used dynamic and momentary gazing in ostensive and nonostensive communicative situations. We tested 41 cats at their owner's home. Cats on the group level achieved a 70% overall success rate, showing that they are capable of following human gaze as a referential cue. Cats' success rate was unaffected both by the type of gazing and the presence/absence of ostensive communication, showing that the subjects followed readily even the more difficult momentary cues. We found a trend (p = 0.085), showing that young cats (max. 1 year old) may achieve higher success rate than adult animals. Ostension had a significant effect on the latency of eye contact, which was the shortest when the experimenter called the cat's attention with ostensive signals (p = 0.006). Our results are the first that prove cats' ability to follow human gaze, which is considered to be one of the more difficult visual referential signals given during human-animal interactions. Although ostension did not affect the success rate of cats, we found ostensive human signals to be a more effective attention elicitor compared to non-ostensive vocalizations. Our study therefore provided the first insight to the existence of sensitivity to human ostension in another non-human species besides dogs. These results emphasize the possible relevance of the domestication process and responsiveness to socialization in the development of human-compatible socio-cognitive skills even in such animals as the cat, where the ancestor was not a highly social species.},
+  date      = {2018-11-10},
+  day       = {10},
+  doi       = {10.1016/j.intell.2018.11.001},
+  file      = {:/home/mart/Downloads/1-s2.0-S0160289618300035-main.pdf:PDF},
+  keywords  = {Cat, Gaze following, Referential signal, Ostension},
+  publisher = {Elsevier BV},
+}
+
+@Article{Pongracz2019a,
+  author    = {Pongrácz, Péter and Szapu, Julianna Szulamit and Faragó, Tamás},
+  journal   = {Intelligence},
+  title     = {Cats (Felis silvestris catus) read human gaze for referential information},
+  year      = {2019},
+  issn      = {0160-2896},
+  month     = may,
+  pages     = {43--52},
+  volume    = {74},
+  abstract  = {Companion cats often occupy the same anthropogenic niche as dogs in human families. Still, cat cognition remains an underrepresented research subject in ethology. Our goal was to examine whether two components that are crucial in dog-human communicative interactions (sensitivity to ostensive signals; gaze following) are also present in cats. In a two-object choice task, we used dynamic and momentary gazing in ostensive and nonostensive communicative situations. We tested 41 cats at their owner's home. Cats on the group level achieved a 70% overall success rate, showing that they are capable of following human gaze as a referential cue. Cats' success rate was unaffected both by the type of gazing and the presence/absence of ostensive communication, showing that the subjects followed readily even the more difficult momentary cues. We found a trend (p = 0.085), showing that young cats (max. 1 year old) may achieve higher success rate than adult animals. Ostension had a significant effect on the latency of eye contact, which was the shortest when the experimenter called the cat's attention with ostensive signals (p = 0.006). Our results are the first that prove cats' ability to follow human gaze, which is considered to be one of the more difficult visual referential signals given during human-animal interactions. Although ostension did not affect the success rate of cats, we found ostensive human signals to be a more effective attention elicitor compared to non-ostensive vocalizations. Our study therefore provided the first insight to the existence of sensitivity to human ostension in another non-human species besides dogs. These results emphasize the possible relevance of the domestication process and responsiveness to socialization in the development of human-compatible socio-cognitive skills even in such animals as the cat, where the ancestor was not a highly social species.},
+  date      = {2018-11-10},
+  day       = {10},
+  doi       = {10.1016/j.intell.2018.11.001},
+  file      = {:/home/mart/Packages/yet_biomim/Literature/Loomis2008b - Psychophysics of Perceiving Eye Gaze and Head Direction with Peripheral Vision_ Implications for the Dynamics of Eye Gaze Behavior.pdf:PDF},
+  keywords  = {Cat, Gaze following, Referential signal, Ostension},
+  publisher = {Elsevier BV},
+}
+
+@Article{Humphrey2020,
+  author    = {Humphrey, Tasmin and Proops, Leanne and Forman, Jemma and Spooner, Rebecca and McComb, Karen},
+  journal   = {Scientific Reports},
+  title     = {The role of cat eye narrowing movements in cat–human communication},
+  year      = {2020},
+  issn      = {2045-2322},
+  month     = oct,
+  number    = {1},
+  volume    = {10},
+  abstract  = {Domestic animals are sensitive to human cues that facilitate inter-specific communication, including cues to emotional state. The eyes are important in signalling emotions, with the act of narrowing the eyes appearing to be associated with positive emotional communication in a range of species. This study examines the communicatory significance of a widely reported cat behaviour that involves eye narrowing, referred to as the slow blink sequence. Slow blink sequences typically involve a series of half-blinks followed by either a prolonged eye narrow or an eye closure. Our first experiment revealed that cat half-blinks and eye narrowing occurred more frequently in response to owners' slow blink stimuli towards their cats (compared to no owner-cat interaction). In a second experiment, this time where an experimenter provided the slow blink stimulus, cats had a higher propensity to approach the experimenter after a slow blink interaction than when they had adopted a neutral expression. Collectively, our results suggest that slow blink sequences may function as a form of positive emotional communication between cats and humans. For companion animals, humans act as key social partners, with these species often spending more time with humans than conspecifics 1. The ability to engage in interspecific communication, not only by reading humangiven cues but also by producing signals directed at humans, would have obvious adaptive advantages for domestic species, allowing the exchange of important social information. A number of domestic animals have been shown to use human-given cues to derive contextual information and perform tasks. Dogs are highly skilled in reading human gestural cues to locate hidden food 2,3 , and can differentiate between the attentive states of handlers when making choices 4-6. More recent studies have revealed that dogs can also gain information through the use of human cues to emotion 7-10. Horses, pigs and goats also all perform successfully in following certain human-given cues in object choice tasks 11-13 , and horses and goats can discriminate between different human emotions 14-16 , adjusting their behaviour in functionally relevant ways (in horses 17). Interspecific communication is not one sided either-some domestic animals can also direct communicative behaviour towards humans. Human-directed gazing behaviour has been suggested to be a form of referential and intentional communication 18,19 and is seen in dogs as young as 2 months old 20 , as well as in other domestic species, such as horses 21 and goats 22. It is notable that the socio-communicative abilities of another key species in the human household, the domestic cat (Felis Catus), have been relatively understudied-perhaps because of the cat's solitary ancestry 23. However, research assessing human-directed gazing by cats in a social referencing paradigm found that most cats do look to their owners when faced with an ambiguous situation 24. In addition, domestic cats have been shown to perform equally as well as dogs in object choice tasks using human pointing 25 , and only slightly worse than dogs in tasks that require human-directed attention-getting to obtain food 23. Cats have also been shown to attract and manipulate human attention effectively in the auditory modality, through solicitation purring 26 , as well as discriminate their name from other words, even when unfamiliar humans are calling 27. There is evidence that they also display specific facial actions during negative emotional contexts with humans compared to the same emotional contexts without human interaction 28,29. Furthermore, there is circumstantial evidence that cats may be sensitive to human emotional cues, displaying more allo-rubbing (a communicative signal of affiliation in cats 30) toward owners in a depressed mood 31. Cats also alter their behaviour in different ways, depending on the valence of the emotional cues presented by a familiar human 32. These findings collectively suggest that the cat may be an interesting model for further investigation of inter-specific communication, particularly in the},
+  doi       = {10.1038/s41598-020-73426-0},
+  file      = {:/home/mart/Packages/yet_biomim/Literature/Kano2022a - Experimental Evidence That Uniformly White Sclera Enhances the Visibility of Eye Gaze Direction in Humans and Chimpanzees.pdf:PDF},
+  publisher = {Springer Science and Business Media LLC},
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
