+ added bachelor thesis

--- a/yet_biomim.bib
+++ b/yet_biomim.bib
@@ -801,6 +801,29 @@
    year = {2016}
 }
 
+@mastersthesis{Hölter2025,
+month = {June},
+author = {Hölter, Janis},
+year= {2025},
+school= {University of Twente},
+address= {Enschede},
+type= {Thesis},
+title= {How do Humans perceive gaze direction},
+abstract= {This study investigates whether Your Eye Tracker (YET), a system that predicts gaze direction from brightness contrasts in eye quadrants, operates similarly to human gaze perception, and what this implies for the Cooperative Eye Hypothesis. We recruited 43 participants who estimated gaze direction from facial images in two conditions: an experimental condition where eyes were replaced with YET-quadrants, and a control condition with unmanipulated images. Stimuli were presented at five exposure times (70ms-1000ms). A Bayesian generalized linear multi-level model analyzed gaze perception accuracy. Participants could detect gaze direction from manipulated images, but with significantly higher deviation than in the control condition. Gaze perception was consistently higher in the experimental condition from 140ms onwards. These results suggest humans can perceive gaze direction from the 2x2 quadrants, though with lower accuracy than from unmanipulated faces. Deviation was significantly lower from 140ms exposure onwards compared to 70ms. These findings support the Cooperative Eye Hypothesis and indicate YET's mechanisms may resemble human cognitive processes, offering practical applications in education or human-robot communication design.},
+url= { https://purl.utwente.nl/essays/107106},
+}
+
+@mastersthesis{Großerichter2025,
+month = {June},
+author = {Großerichter, J.},
+year= {2025},
+school= {University of Twente},
+address= {Enschede},
+type= {Thesis},
+title= {Human Gaze Estimation : Comparing Accuracy in Naturalistic and Quad Brightness Conditions},
+abstract= {This paper investigates gaze estimation as a cognitive process and proposes that human gaze estimation can be modelled with an average brightness mechanism, split into four sectors or in other words, a quad brightness mechanism. The aim of this paper was to confirm whether humans are indeed able to estimate gaze in a quad brightness condition and, secondly, to test their accuracy in such a condition. For this research, face images were created and manipulated to show four quadrants with average brightness. These images were run through the times 70ms, 140ms, 400ms, 600ms and 1000ms in both original and manipulated form and participants estimated the gaze orientation of each conditions faces. It was found that participants were able to estimate the gaze orientation of quad brightness images. Their accuracy was, however, somewhat worse with a deviation of 10°. In a larger context and based on the findings, it is likely that the quad brightness process models, either a section of a larger process, of gaze estimations or is part of multiple and separate processes for gaze estimations. Further research could investigate how these processes are linked, as well as the influence of head directions.},
+url= { https://purl.utwente.nl/essays/106716},
+}
 
 
 @Comment{jabref-meta: databaseType:bibtex;}
